dapr all services

--- a/agentdock/dapr.yaml
+++ b/agentdock/dapr.yaml
@@ -12,24 +12,24 @@ apps:
   command: ["python3", "run.py"]
   appPort: 8000
 
-# - appID: JiraApp
-#   appDirPath: ./mcp_servers/jira/
-#   command: ["python3", "app.py"]
+- appID: JiraApp
+  appDirPath: ./mcp_servers/jira/
+  command: ["python3", "app.py"]
 
-# - appID: SlackApp
-#   appDirPath: ./mcp_servers/slack/
-#   command: ["python3", "app.py"]
+- appID: SlackApp
+  appDirPath: ./mcp_servers/slack/
+  command: ["python3", "app.py"]
 
-# - appID: GithubApp
-#   appDirPath: ./mcp_servers/github/
-#   command: ["python3", "app.py"]
+- appID: GithubApp
+  appDirPath: ./mcp_servers/github/
+  command: ["python3", "app.py"]
 
-# - appID: OrchestratorApp
-#   appDirPath: ./workflows/orchestrator/
-#   command: ["python3", "app.py"]
-#   appPort: 8004
+- appID: OrchestratorApp
+  appDirPath: ./workflows/orchestrator/
+  command: ["python3", "app.py"]
+  appPort: 8004
 
-# - appID: FrontendApp
-#   appDirPath: ./frontend
-#   command: ["npm", "start"]
-#   appPort: 3000
+- appID: FrontendApp
+  appDirPath: ./frontend
+  command: ["npm", "start"]
+  appPort: 3000
