Added Github MCP server and integrated chatbot

--- a/agentdock/.env
+++ b/agentdock/.env
@@ -1,1 +1,7 @@
-OPENAI_API_KEY=your_api_key_here
+# API Keys and Tokens
+GROQ_API_KEY=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
+GITHUB_TOKEN=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
+# Server Ports
+BACKEND_PORT=8000
+GITHUB_MCP_PORT=8001
+FRONTEND_PORT=3000
