Added slack scp server and integrated it with frontend

--- a/agentdock/dapr.yaml
+++ b/agentdock/dapr.yaml
@@ -14,6 +14,7 @@ apps:
   env:
     GROQ_API_KEY: "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"
     GITHUB_MCP_URL: "http://localhost:8001"
+    SLACK_MCP_URL: "http://localhost:8003"
 
 - appID: JiraApp
   appDirPath: ./mcp_servers/jira/
@@ -22,6 +23,7 @@ apps:
 - appID: SlackApp
   appDirPath: ./mcp_servers/slack/
   command: ["python", "app.py"]
+  appPort: 8003
 
 - appID: GithubApp
   appDirPath: ./mcp_servers/github/
