--- a/agentdock/requirements.txt
+++ b/agentdock/requirements.txt
@@ -16,6 +16,10 @@ python-multipart==0.0.9
 dapr-agents==0.5.1
 requests==2.31.0
 
+# Scientific Computing Dependencies
+numpy==1.24.3
+scipy==1.10.1
+
 # Development Dependencies
 black==24.1.1
 flake8==7.0.0
